refactoring. added jwt authentication.